force-app/main/default/objects/Payment__c/fields/Payment_Check__c.field-meta.xml
<CustomField>
    <fullName>Payment_Check__c</fullName>
    <formula>ISPICKVAL(Payment_Status__c, &quot;Paid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Check</label>
    <type>Checkbox</type>
</CustomField>