force-app/main/default/objects/Payment__c/fields/Transaction_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID_Text__c</fullName>
    <label>Transaction ID	Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>