force-app/main/default/objects/Payment__c/validationRules/Payment_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Check</fullName>
    <active>true</active>
    <description>Prevents the payment amount from exceeding the total fee amount.</description>
    <errorConditionFormula>Amount_Paid__c &gt; Fee__r.Total_Amount__c</errorConditionFormula>
    <errorDisplayField>Amount_Paid__c</errorDisplayField>
    <errorMessage>Amount exceeds total fee.</errorMessage>
</ValidationRule>