force-app/main/default/objects/Payment__c/validationRules/Transaction_ID_is_mandatory_for_Digital.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_ID_is_mandatory_for_Digital</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Payment_Method__c, &quot;Cash&quot;) = FALSE,
    ISBLANK(Transaction_ID_Text__c)
)</errorConditionFormula>
    <errorMessage>Transaction ID is required for non-cash payments.</errorMessage>
</ValidationRule>